--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -31,10 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 89,
+   "metadata": {},
    "outputs": [],
    "source": [
     "st = 'Print only the words that start with s in this sentence'"
@@ -42,13 +40,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "s\n",
+      "sentence\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code here"
+    "for word in st.split():\n",
+    "    if word[0]=='s':\n",
+    "        print(word)"
    ]
   },
   {
@@ -61,13 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code Here"
+    "for num in range(0,10,2):\n",
+    "    print(num)"
    ]
   },
   {
@@ -80,14 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell\n",
-    "[]"
+    "mylist=[]\n",
+    "\n",
+    "for a in range(0,50):\n",
+    "    if a % 3 ==0:\n",
+    "        mylist.append(a)\n",
+    "\n",
+    "print(mylist)"
    ]
   },
   {
@@ -100,10 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "st = 'Print every word in this sentence that has an even number of letters'"
@@ -111,13 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word<-----contains an even length\n",
+      "in<-----contains an even length\n",
+      "this<-----contains an even length\n",
+      "sentence<-----contains an even length\n",
+      "that<-----contains an even length\n",
+      "an<-----contains an even length\n",
+      "even<-----contains an even length\n",
+      "number<-----contains an even length\n",
+      "of<-----contains an even length\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "for word in st.split():\n",
+    "    if len(word)%2==0:\n",
+    "        print(word+\"<-----contains an even length\")\n",
+    "        \n",
+    "     \n",
+    "    \n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -130,13 +179,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "fizz\n",
+      "4\n",
+      "buzz\n",
+      "fizz\n",
+      "7\n",
+      "8\n",
+      "fizz\n",
+      "buzz\n",
+      "11\n",
+      "fizz\n",
+      "13\n",
+      "14\n",
+      "fizzbuzz\n",
+      "16\n",
+      "17\n",
+      "fizz\n",
+      "19\n",
+      "buzz\n",
+      "fizz\n",
+      "22\n",
+      "23\n",
+      "fizz\n",
+      "buzz\n",
+      "26\n",
+      "fizz\n",
+      "28\n",
+      "29\n",
+      "fizzbuzz\n",
+      "31\n",
+      "32\n",
+      "fizz\n",
+      "34\n",
+      "buzz\n",
+      "fizz\n",
+      "37\n",
+      "38\n",
+      "fizz\n",
+      "buzz\n",
+      "41\n",
+      "fizz\n",
+      "43\n",
+      "44\n",
+      "fizzbuzz\n",
+      "46\n",
+      "47\n",
+      "fizz\n",
+      "49\n",
+      "buzz\n",
+      "fizz\n",
+      "52\n",
+      "53\n",
+      "fizz\n",
+      "buzz\n",
+      "56\n",
+      "fizz\n",
+      "58\n",
+      "59\n",
+      "fizzbuzz\n",
+      "61\n",
+      "62\n",
+      "fizz\n",
+      "64\n",
+      "buzz\n",
+      "fizz\n",
+      "67\n",
+      "68\n",
+      "fizz\n",
+      "buzz\n",
+      "71\n",
+      "fizz\n",
+      "73\n",
+      "74\n",
+      "fizzbuzz\n",
+      "76\n",
+      "77\n",
+      "fizz\n",
+      "79\n",
+      "buzz\n",
+      "fizz\n",
+      "82\n",
+      "83\n",
+      "fizz\n",
+      "buzz\n",
+      "86\n",
+      "fizz\n",
+      "88\n",
+      "89\n",
+      "fizzbuzz\n",
+      "91\n",
+      "92\n",
+      "fizz\n",
+      "94\n",
+      "buzz\n",
+      "fizz\n",
+      "97\n",
+      "98\n",
+      "fizz\n",
+      "buzz\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#mylist=[]\n",
+    "\n",
+    "for number in range(1,101):\n",
+    "    if number % 3 == 0 and number % 5 == 0:\n",
+    "        print('fizzbuzz')\n",
+    "    elif number % 3 == 0:\n",
+    "        print('fizz')\n",
+    "    elif number % 5 == 0:\n",
+    "        print('buzz')\n",
+    "    else:\n",
+    "        print(number)\n",
+    "   # mylist.append(number)\n",
+    "    \n",
+    "#print(mylist)"
    ]
   },
   {
@@ -149,10 +316,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 94,
+   "metadata": {},
    "outputs": [],
    "source": [
     "st = 'Create a list of the first letters of every word in this string'"
@@ -166,7 +331,7 @@
    },
    "outputs": [],
    "source": [
-    "#Code in this cell"
+    "mylist= []"
    ]
   },
   {
@@ -179,7 +344,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
